# napalm-unifi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
napalm_unifi/: __init__.py  uap.py  unifi.py  usg.py  usw.py  usw_flex.py  usw_lite.py
napalm_unifi/utils/textfsm_templates/: index  ubiquiti_unifi_ip_address_show.textfsm  ubiquiti_unifi_ip_link_show.textfsm  ubiquiti_unifi_show_lldp_interfaces_all_neighbor.textfsm  ubiquiti_unifi_show_lldp_interfaces_neighbor.textfsm  ubiquiti_unifi_show_lldp_neighbor.textfsm  ubiquiti_unifi_show_lldp_remote-device_all.textfsm  ubiquiti_unifi_show_lldp_remote-device_detail.textfsm
tests/: test_structured_data_against_parsed_reference_files.py
tests/napalm_unifi/: __init__.py  test_unifi_switch_driver.py
tests/napalm_unifi/testdata/usw/: cat-running-cfg.txt  ip-address-show.txt  ip-link-show.txt  mca-dump.txt  show-lldp-remote-device-all.txt  tests.json  (+1 more)
tests/ubiquiti_unifi/ip_link_show/: ip_link_show.raw  ip_link_show.yml
tests/ubiquiti_unifi/show_lldp_interfaces_all_neighbor/: show_lldp_interfaces_all_neighbor.raw  show_lldp_interfaces_all_neighbor.yml  show_lldp_interfaces_all_neighbor2.raw  show_lldp_interfaces_all_neighbor2.yml  show_lldp_interfaces_all_neighbor3.raw  show_lldp_interfaces_all_neighbor3.yml  show_lldp_interfaces_all_neighbor4.raw  show_lldp_interfaces_all_neighbor4.yml
tests/ubiquiti_unifi/show_lldp_neighbor/: show_lldp_neighbor.raw  show_lldp_neighbor.yml
tests/ubiquiti_unifi/show_lldp_remote-device_all/: show_lldp_remote-device_all.raw  show_lldp_remote-device_all.yml
