[project]
name = "napalm-unifi"
version = "0.3.2"
description = ""
authors = [
	{name = "Andrew Bates", email = "andrew.bates@networktocode.com"}
]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "napalm_unifi"}]
requires-python = "^3.9"
dependencies = [
	"napalm >=5.0"
]

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
